# agentic-mcp-client

./: .gitignore  LICENSE  README.md  agent_worker_task.json.example  config.json.example  docker-bake.hcl  pyproject.toml
agentic_mcp_client/: lifespan.py  utils.py
agentic_mcp_client/agent_worker/: agent_worker.py  anthropic_handler.py  customer_logs.py  openai_handler.py  run.py  utils.py
agentic_mcp_client/anthropic_clients/: __init__.py  chatCompletion.py  genericClient.py  utils.py
agentic_mcp_client/config/: __init__.py  final.py
agentic_mcp_client/health/: router.py
agentic_mcp_client/mcpManagement/: prompts.py  resources.py  router.py  server.py  tools.py
agentic_mcp_client/mcp_clients/: AbstractClient.py  DockerClient.py  McpClientManager.py  SseClient.py  StdioClient.py  session.py
agentic_mcp_client/mcp_server/: __init__.py  server.py
agentic_mcp_client/openai_clients/: chatCompletion.py  genericHttpxClient.py  streamChatCompletion.py  utils.py
agentic_mcp_client/sampling/: modelSelector.py  sampler.py
agentic_mcp_client/tool_mappers/: __init__.py  mcp2anthropicConverters.py
dashboard/: package-lock.json  package.json  swagger.ts  tailwind.config.js
dashboard/app/: layout.tsx  page.tsx
dashboard/app/api-docs/: page.tsx  swagger.css
dashboard/app/api/jobs/: route.ts
dashboard/app/jobs/: page.tsx
dashboard/app/lib/: sessions.ts
dashboard/components/: JobSubmissionForm.tsx  JobsList.tsx  JobsPageClient.tsx  SessionDetail.tsx  SessionList.tsx
dashboard/lib/: sessions.ts
dashboard/types/: job.ts  session.ts  swagger-ui-react.d.ts
(+7 files in other folders)
